Fixed nav bar text not having background on narrow window size

--- a/css/me.css
+++ b/css/me.css
@@ -524,10 +524,12 @@ i.underscore{
 
 .nav-element > a > div{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
+  height: fit-content;
   font-size: 1.5rem;
   text-align: center;
   border-radius: 0.5rem;
+  background-color: var(--clr-bg);
   transition: 250ms ease;
 }
 
